--- a/langs/zh_Hans.txt
+++ b/langs/zh_Hans.txt
@@ -45,7 +45,7 @@ By File Name=按文件名
 By File Size=按文件大小
 By Progress=按进度
 By Selected Status=按选中状态
-By Remain Time=按剩余时间
+By Remaining=按剩余时间
 By Download Speed=按下载速度
 By Upload Speed=按上传速度
 By Peer Address=按节点地址
@@ -82,7 +82,7 @@ File Name=文件名
 File Size=大小
 Progress=进度
 Share Ratio=分享率
-Remain Time=剩余时间
+Remaining=剩余时间
 Download Speed=下载速度
 Upload Speed=上传速度
 Links=链接
@@ -91,7 +91,7 @@ Metalink File=Metalink 文件
 File Name:=文件名:
 Options=选项
 Overview=总览
-Blocks=区块信息
+Pieces=区块信息
 Files=文件列表
 Peers=连接状态
 Task Name=任务名称
@@ -135,8 +135,8 @@ Failed to remove some task(s).=删除一些任务时失败.
 Confirm Clear=确认清除
 Are you sure you want to clear stopped tasks?=您是否要清除已结束的任务?
 Download Links:=下载链接:
-Start Download=立即下载
-Manual Download=手动下载
+Download Now=立即下载
+Download Later=手动下载
 Open Torrent File=打开种子文件
 Open Metalink File=打开 Metalink 文件
 Support multiple URLs, one URL per line.=支持多个 URL 地址, 每个地址占一行.
@@ -150,9 +150,9 @@ Language=语言
 Debug Mode=调试模式
 Page Title=页面标题
 Preview=预览
-Tips: You can use the "noprefix" tag to ignore the prefix, "nosuffix" tag ignore the suffix, and "scale\=n" tag to set the decimal precision.=小提示: 您可以使用 "noprefix" 标签忽略前缀, "nosuffix" 标签忽略后缀, 以及 "scale\=n" 标签设置小数的精度.
+Tips: You can use the "noprefix" tag to ignore the prefix, "nosuffix" tag to ignore the suffix, and "scale\=n" tag to set the decimal precision.=小提示: 您可以使用 "noprefix" 标签忽略前缀, "nosuffix" 标签忽略后缀, 以及 "scale\=n" 标签设置小数的精度.
 Example: ${downspeed:noprefix:nosuffix:scale\=1}=示例: ${downspeed:noprefix:nosuffix:scale\=1}
-Page Title Refresh Interval=页面标题刷新间隔
+Updating Page Title Interval=页面标题更新间隔
 Enable Browser Notification=启用浏览器通知
 Aria2 RPC Alias=Aria2 RPC 别名
 Aria2 RPC Address=Aria2 RPC 地址
@@ -169,15 +169,15 @@ Are you sure you want to clear all settings history?=您是否要清除所有设
 Delete RPC Setting=删除 RPC 设置
 Add New RPC Setting=添加新 RPC 设置
 Are you sure you want to remove rpc setting "{{rpcName}}"?=您是否要删除 RPC 设置 "{{rpcName}}"?
-Global Stat Refresh Interval=全局状态刷新间隔
-Download Task Refresh Interval=下载任务刷新间隔
+Updating Global Stat Interval=全局状态更新间隔
+Updating Task Information Interval=任务信息更新间隔
 Action After Creating New Tasks=创建新任务后执行操作
-Removing Old Task After Retrying=重试任务后删除原任务
 Navigate to Task List Page=转到任务列表页面
 Navigate to Task Detail Page=转到任务详情页面
 Action After Retrying Task=重试任务后执行操作
-Navigate to Downloading Task List Page=转到正在下载任务列表页面
+Navigate to Downloading Tasks Page=转到正在下载列表页面
 Stay on Current Page=留在当前页面
+Remove Old Tasks After Retrying=重试任务后删除原任务
 RPC List Display Order=RPC 列表显示顺序
 Recently Used=最近使用
 RPC Alias=RPC 别名
@@ -202,7 +202,7 @@ Show Secret=显示密钥
 Hide Secret=隐藏密钥
 Aria2 Version=Aria2 版本
 Enabled Features=已启用的功能
-Functions=方法
+Operations=操作
 Save Session=保存会话
 Shutdown Aria2=关闭 Aria2
 Confirm Shutdown=确认关闭
@@ -210,8 +210,8 @@ Are you sure you want to shutdown aria2?=您是否要关闭 aria2?
 Session has been saved successfully.=会话已经成功保存.
 Aria2 has been shutdown successfully.=Aria2 已经成功关闭.
 Toggle Navigation=切换导航
-Quick Setting=快捷设置
-Global Speed Limit=全局速度限制
+Shortcut=快捷方式
+Global Rate Limit=全局速度限制
 Loading=正在加载...
 More Than One Day=超过1天
 Unknown=未知
@@ -221,10 +221,10 @@ Minutes=分
 Seconds=秒
 Milliseconds=毫秒
 Http=Http
-Http (Disabled)=Http (禁用)
+Http (Disabled)=Http (已禁用)
 Https=Https
 WebSocket=WebSocket
-WebSocket (Disabled)=WebSocket (禁用)
+WebSocket (Disabled)=WebSocket (已禁用)
 WebSocket (Security)=WebSocket (安全)
 Http and WebSocket would be disabled when accessing AriaNg via Https.=使用 Https 访问 AriaNg 时，Http 和 WebSocket 将被禁用.
 POST=POST
@@ -248,7 +248,7 @@ URL is not base64 encoded!=指定 URL 不是 Base64 编码后的字符串!
 Tap to configure and get started with AriaNg.=您还没有进行过设置, 点击这里进行设置.
 Cannot initialize WebSocket!=无法初始化 WebSocket!
 Access Denied!=拒绝访问!
-You cannot use AriaNg because this browser does not support data storage.=您无法使用 AriaNg, 您的浏览器不支持数据存储.
+You cannot use AriaNg because this browser does not meet the minimum requirements for data storage.=您无法使用 AriaNg, 因为这个浏览器不满足数据存储的最低要求.
 
 [error]
 unknown=未知错误.
