--- a/langs/zh_Hant.txt
+++ b/langs/zh_Hant.txt
@@ -45,7 +45,7 @@ By File Name=依檔名
 By File Size=依檔案大小
 By Progress=依進度
 By Selected Status=依選中狀態
-By Remain Time=依剩餘時間
+By Remaining=依剩餘時間
 By Download Speed=依下載速度
 By Upload Speed=依上傳速度
 By Peer Address=依節點位址
@@ -82,7 +82,7 @@ File Name=檔名
 File Size=大小
 Progress=進度
 Share Ratio=分享率
-Remain Time=剩餘時間
+Remaining=剩餘時間
 Download Speed=下載速度
 Upload Speed=上傳速度
 Links=連結
@@ -91,7 +91,7 @@ Metalink File=Metalink 檔案
 File Name:=檔名:
 Options=選項
 Overview=總覽
-Blocks=區塊資訊
+Pieces=區塊資訊
 Files=檔案清單
 Peers=連線狀態
 Task Name=工作名稱
@@ -135,8 +135,8 @@ Failed to remove some task(s).=刪除一些工作時失敗.
 Confirm Clear=確認清除
 Are you sure you want to clear stopped tasks?=您是否要清除已結束的工作?
 Download Links:=下載連結:
-Start Download=立即下載
-Manual Download=手動下載
+Download Now=立即下載
+Download Later=手動下載
 Open Torrent File=打開種子檔案
 Open Metalink File=打開 Metalink 檔案
 Support multiple URLs, one URL per line.=支援多個 URL 位址, 每個位址佔一行.
@@ -150,9 +150,9 @@ Language=語言
 Debug Mode=偵錯模式
 Page Title=頁面標題
 Preview=預覽
-Tips: You can use the "noprefix" tag to ignore the prefix, "nosuffix" tag ignore the suffix, and "scale\=n" tag to set the decimal precision.=小提示: 您可以使用 "noprefix" 標籤忽略前綴, "nosuffix" 標籤忽略副檔名, 以及 "scale\=n" 標籤設定小數的精度.
+Tips: You can use the "noprefix" tag to ignore the prefix, "nosuffix" tag to ignore the suffix, and "scale\=n" tag to set the decimal precision.=小提示: 您可以使用 "noprefix" 標籤忽略前綴, "nosuffix" 標籤忽略副檔名, 以及 "scale\=n" 標籤設定小數的精度.
 Example: ${downspeed:noprefix:nosuffix:scale\=1}=示例: ${downspeed:noprefix:nosuffix:scale\=1}
-Page Title Refresh Interval=頁面標題重新整理間隔
+Updating Page Title Interval=頁面標題更新間隔
 Enable Browser Notification=啟用瀏覽器通知
 Aria2 RPC Alias=Aria2 RPC 別名
 Aria2 RPC Address=Aria2 RPC 位址
@@ -169,15 +169,15 @@ Are you sure you want to clear all settings history?=您是否要清除所有設
 Delete RPC Setting=刪除 RPC 設定
 Add New RPC Setting=加入新 RPC 設定
 Are you sure you want to remove rpc setting "{{rpcName}}"?=您是否要刪除 RPC 設定 "{{rpcName}}"?
-Global Stat Refresh Interval=全域狀態重新整理間隔
-Download Task Refresh Interval=下載工作重新整理間隔
+Updating Global Stat Interval=全域狀態更新間隔
+Updating Task Information Interval=工作資訊更新間隔
 Action After Creating New Tasks=建立新工作後執行操作
-Removing Old Task After Retrying=重試工作後刪除原工作
 Navigate to Task List Page=轉到工作清單頁面
 Navigate to Task Detail Page=轉到工作詳情頁面
 Action After Retrying Task=重試工作後執行操作
-Navigate to Downloading Task List Page=轉到正在下載工作清單頁面
+Navigate to Downloading Tasks Page=轉到正在下載工作頁面
 Stay on Current Page=留在目前頁面
+Remove Old Tasks After Retrying=重試工作後刪除原工作
 RPC List Display Order=RPC 清單顯示順序
 Recently Used=最近使用
 RPC Alias=RPC 別名
@@ -202,7 +202,7 @@ Show Secret=顯示金鑰
 Hide Secret=隱藏金鑰
 Aria2 Version=Aria2 版本
 Enabled Features=已啟用的功能
-Functions=方法
+Operations=操作
 Save Session=儲存會話
 Shutdown Aria2=關閉 Aria2
 Confirm Shutdown=確認關閉
@@ -210,8 +210,8 @@ Are you sure you want to shutdown aria2?=您是否要關閉 aria2?
 Session has been saved successfully.=會話已經成功儲存.
 Aria2 has been shutdown successfully.=Aria2 已經成功關閉.
 Toggle Navigation=切換導航
-Quick Setting=設定捷徑
-Global Speed Limit=全域速度限制
+Shortcut=捷徑
+Global Rate Limit=全域速度限制
 Loading=正在載入...
 More Than One Day=超過1天
 Unknown=不詳
@@ -221,10 +221,10 @@ Minutes=分
 Seconds=秒
 Milliseconds=毫秒
 Http=Http
-Http (Disabled)=Http (停用)
+Http (Disabled)=Http (已停用)
 Https=Https
 WebSocket=WebSocket
-WebSocket (Disabled)=WebSocket (停用)
+WebSocket (Disabled)=WebSocket (已停用)
 WebSocket (Security)=WebSocket (安全)
 Http and WebSocket would be disabled when accessing AriaNg via Https.=使用 Https 訪問 AriaNg 時，Http 和 WebSocket 將被停用.
 POST=POST
@@ -248,7 +248,7 @@ URL is not base64 encoded!=指定 URL 不是 Base64 編碼後的字串!
 Tap to configure and get started with AriaNg.=您還沒有進行過設定, 點選這裡進行設定.
 Cannot initialize WebSocket!=無法初始化 WebSocket!
 Access Denied!=拒絕訪問!
-You cannot use AriaNg because this browser does not support data storage.=您無法使用 AriaNg, 您的瀏覽器不支援資料儲存.
+You cannot use AriaNg because this browser does not meet the minimum requirements for data storage.=您無法使用 AriaNg, 因為此瀏覽器不滿足資料儲存的最低要求.
 
 [error]
 unknown=不詳錯誤.
