--- a/langs/zh_Hans.txt
+++ b/langs/zh_Hans.txt
@@ -2,7 +2,7 @@
 AriaNg Version=AriaNg 版本
 Operation Result=操作结果
 Operation Succeeded=操作成功
-{{name}} is connected={{name}} 已连接
+is connected=已连接
 Error=错误
 OK=确定
 Confirm=确认
@@ -196,8 +196,10 @@ Downloading Count=正在下载数量
 Waiting Count=正在等待数量
 Stopped Count=已停止数量
 You have disabled notification in your browser. You should change your browser's settings before you enable this function.=您已经在浏览器中禁用通知功能. 如需使用此功能, 请修改您浏览器的设置.
+Application cache has been updated, please reload the page for the changes to take effect.=应用缓存已经更新, 请重新加载页面使其生效.
+Language resource has been updated, please reload the page for the changes to take effect.=语言资源已经更新, 请重新加载页面使其生效.
 Configuration has been modified, please reload the page for the changes to take effect.=配置已经修改, 请重新加载页面使其生效.
-Reload Page=重新加载页面
+Reload AriaNg=重新加载 AriaNg
 Show Secret=显示密钥
 Hide Secret=隐藏密钥
 Aria2 Version=Aria2 版本
@@ -281,6 +283,11 @@ option.bad=设置错误.
 server.overload=远程服务器繁忙, 无法处理当前请求.
 rpc.request.parse.failed=处理 RPC 请求失败.
 checksum.failed=文件校验失败.
+
+[languages]
+English=英语
+Simplified Chinese=简体中文
+Traditional Chinese=繁体中文
 
 [format]
 longdate=YYYY年MM月DD日 HH:mm:ss
