--- a/langs/zh_Hant.txt
+++ b/langs/zh_Hant.txt
@@ -2,7 +2,7 @@
 AriaNg Version=AriaNg 版本
 Operation Result=操作結果
 Operation Succeeded=操作成功
-{{name}} is connected={{name}} 已連線
+is connected=已連線
 Error=錯誤
 OK=確定
 Confirm=確認
@@ -196,8 +196,10 @@ Current RPC Alias=目前 RPC 別名
 Waiting Count=正在等待數量
 Stopped Count=已停止數量
 You have disabled notification in your browser. You should change your browser's settings before you enable this function.=您已經在瀏覽器中停用通知功能. 如需使用此功能, 請修改您瀏覽器的設定.
+Application cache has been updated, please reload the page for the changes to take effect.=應用快取已經更新, 請重新載入頁面使其生效.
+Language resource has been updated, please reload the page for the changes to take effect.=語言資源已經更新, 請重新載入頁面使其生效.
 Configuration has been modified, please reload the page for the changes to take effect.=配置已經修改, 請重新載入頁面使其生效.
-Reload Page=重新載入頁面
+Reload AriaNg=重新載入 AriaNg
 Show Secret=顯示金鑰
 Hide Secret=隱藏金鑰
 Aria2 Version=Aria2 版本
@@ -281,6 +283,11 @@ option.bad=設定錯誤.
 server.overload=遠端伺服器繁忙, 無法處理目前要求.
 rpc.request.parse.failed=處理 RPC 要求失敗.
 checksum.failed=檔案校驗失敗.
+
+[languages]
+English=英語
+Simplified Chinese=簡體中文
+Traditional Chinese=繁體中文
 
 [format]
 longdate=YYYY年MM月DD日 HH:mm:ss
